# AutoESignature

./: setup.cfg  setup.py
data/: hashes_to_sign.txt  settings_setted.json  url_service.json
src/: apprun.py  codelogging.py  loginstorage.py  loginwindow.py  main.py  settingswindow.py  storingfiles.py  stylingfunctions.py  tray.py  websocketclient.py  websocketmessage.py
src/hashes/: signinghashes.py  storinghashes.py
src/logging/: loggingconfig.json
src/src.egg-info/: PKG-INFO  SOURCES.txt
src/uis_to_pys/: loginwidgetui.py  loginwindowui.py  settingswindowui.py  wsclientconnectionui.py
tests/: signed_hashes.txt  storinghashes.py  user_data.json  websocketservertest.py
ui/: loginwindow.ui  settingswindow.ui  wsclientconnection.ui
