[metadata]
name = src
version = 1.0
author = <Mariia Sudakova>
author_email = littlezwhitezridingzhood@gmail.com
description = Sources file of the AutoESignature project
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Windows
license_files = LICENSE.txt

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
